# minecraft-server-scanner

./: .env.example  Cargo.toml  README.md  format_masscan_output.sh  ipList.txt  masscan.conf  paused.conf  scan.txt
src/: main.rs
