[package]
name = "mc-scanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
serde = "1.0.145"
serde_derive = "1.0.145"
serde_json = "1.0.86"
tokio = { version = "1.21.2", features = ["full"] }
colored = "2.0.0"

[dependencies.mongodb]
version = "2.3.1"
features = ["tokio-sync"]
